Enabling next two functions
