# app/main.py
@@ -47,5 +47,22 @@ def getDeptWithMaxConversion():
   dept_name = visitstats_util.get_dept_with_max_conv(visit_date)
   return dept_name, 200
 
+@app.route('/getDeptWithMaxGD', methods=['GET'])
+def getDeptWithMaxGD():
+  visitstats_util = Visitstats()
+  visit_date = request.args.get('visitDate')
+  if visit_date is None:
+    return 'Provide a valid visit date',400
+  dept_name = visitstats_util.get_dept_with_max_GD(visit_date)
+  return dept_name, 200
+
+  @app.route('/getMCWithMaxVisits', methods=['GET'])
+def getMCWithMaxVisits():
+  visitstats_util = Visitstats()
+  visit_date = request.args.get('visitDate')
+  if visit_date is None:
+    return 'Provide a valid visit date',400
+  dept_name = visitstats_util.get_MC_with_max_visits(visit_date)
+  return dept_name, 200
 if __name__ == '__main__':
   app.run(host='127.0.0.1', port=8080, debug=True)
