# openapi.yaml
@@ -25,7 +25,7 @@ paths:
   "/getDeptWithMaxSiteVisits":
     get:
       description: "Gets the department who had maximum site visits yesterday for a date (Aug-7)"
-      operationId: "visitDateForDept"
+      operationId: "getDeptWithMaxSiteVisits"
       parameters:
         -
           name: visitDate
@@ -42,7 +42,7 @@ paths:
   "/getDeptWithMaxOrders":
     get:
       description: "Gets the department who had maximum orders yesterday for a date (Aug-7)"
-      operationId: "visitDateForMaxOrders"
+      operationId: "getDeptWithMaxOrders"
       parameters:
         -
           name: visitDate
@@ -59,7 +59,7 @@ paths:
   "/getDeptWithMaxConversion":
     get:
       description: "Gets the department who had maximum conversion yesterday for a date (Aug-7)"
-      operationId: "visitDateForMaxConv"
+      operationId: "getDeptWithMaxConversion"
       parameters:
         -
           name: visitDate
@@ -73,121 +73,124 @@ paths:
             type: string
         400:
           description: "The site visit date is invalid or missing."                    
-  # "/getDeptWithMaxGD":
-  #   get:
-  #     description: "Gets the department who had maximum GD yesterday for a date (Aug-7)"
-  #     operationId: "visitDate"
-  #     parameters:
-  #       -
-  #         name: visitDate
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The site visit date is invalid or missing."            
-  # "/getMCWithMaxVisits":
-  #   get:
-  #     description: "Gets the Marketing Channel who had maximum visits yesterday for a date (Aug-7)"
-  #     operationId: "visitDate"
-  #     parameters:
-  #       -
-  #         name: visitDate
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The site visit date is invalid or missing."            
-  # "/getTop10ProductsWithMaxGD":
-  #   get:
-  #     description: "Gets the Top 10 products who had maximum GD yesterday for a date (Aug-7)"
-  #     operationId: "visitDate"
-  #     parameters:
-  #       -
-  #         name: visitDate
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The site visit date is invalid or missing."            
-  # "/getMCWithMaxGD":
-  #   get:
-  #     description: "Gets the Marketing Channel who had maximum GD yesterday for a date (Aug-7)"
-  #     operationId: "visitDate"
-  #     parameters:
-  #       -
-  #         name: visitDate
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The site visit date is invalid or missing."         
-  # "/getSpecialBuy":
-  #   get:
-  #     description: "Gets today's special buy"
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  # "/getNoOfSKUsSpecialBuy":
-  #   get:
-  #     description: "Gets number of SKUs in today's special buy"
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  # "/getTodaysConv":
-  #   get:
-  #     description: "Gets the today's conversion as of specified time"
-  #     operationId: "time"
-  #     parameters:
-  #       -
-  #         name: time
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The time is invalid or missing."   
-  # "/getMCWithMaxConv":
-  #   get:
-  #     description: "Gets the Marketing Channel with max conversion as of specified time"
-  #     operationId: "time"
-  #     parameters:
-  #       -
-  #         name: time
-  #         in: query
-  #         required: true
-  #         type: string
-  #     responses:
-  #       200:
-  #         description: "Success."
-  #         schema:
-  #           type: string
-  #       400:
-  #         description: "The time is invalid or missing."   
+  "/getDeptWithMaxGD":
+    get:
+      description: "Gets the department who had maximum GD yesterday for a date (Aug-7)"
+      operationId: "getDeptWithMaxGD"
+      parameters:
+        -
+          name: visitDate
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The site visit date is invalid or missing."            
+  "/getMCWithMaxVisits":
+    get:
+      description: "Gets the Marketing Channel who had maximum visits yesterday for a date (Aug-7)"
+      operationId: "getMCWithMaxVisits"
+      parameters:
+        -
+          name: visitDate
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The site visit date is invalid or missing."            
+  "/getTop10ProductsWithMaxGD":
+    get:
+      description: "Gets the Top 10 products who had maximum GD yesterday for a date (Aug-7)"
+      operationId: "getTop10ProductsWithMaxGD"
+      parameters:
+        -
+          name: visitDate
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The site visit date is invalid or missing."            
+  "/getMCWithMaxGD":
+    get:
+      description: "Gets the Marketing Channel who had maximum GD yesterday for a date (Aug-7)"
+      operationId: "getMCWithMaxGD"
+      parameters:
+        -
+          name: visitDate
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The site visit date is invalid or missing."         
+  "/getSpecialBuy":
+    get:
+      description: "Gets today's special buy"
+      operationId: "getSpecialBuy"
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+  "/getNoOfSKUsSpecialBuy":
+  operationId: "getNoOfSKUsSpecialBuy"
+    get:
+      description: "Gets number of SKUs in today's special buy"
+      operationId: "getNoOfSKUsSpecialBuy"
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+  "/getTodaysConv":
+    get:
+      description: "Gets the today's conversion as of specified time"
+      operationId: "getTodaysConv"
+      parameters:
+        -
+          name: time
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The time is invalid or missing."   
+  "/getMCWithMaxConv":
+    get:
+      description: "Gets the Marketing Channel with max conversion as of specified time"
+      operationId: "getMCWithMaxConv"
+      parameters:
+        -
+          name: time
+          in: query
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Success."
+          schema:
+            type: string
+        400:
+          description: "The time is invalid or missing."   
